--- a/index.html
+++ b/index.html
@@ -511,50 +511,79 @@
     </div>
   </div>
 </div>
-<!-- TODO self host jsencrypt? -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js'></script>
 <script>
-  var crypt = new JSEncrypt()
-  var pubKey = '-----BEGIN PUBLIC KEY-----'
-             +'MIIBIzANBgkqhkiG9w0BAQEFAAOCARAAMIIBCwKCAQIAvGIrYJvw1wXHi29KOay4'
-             +'r8pz1+bQQz3T8EhlprtI/7TcclzrVpKfAlFkzSg+sR1IIP/4g/rmcbRmT7S1QS3A'
-             +'3vtol1sx7NcSuNd4iE2SbnLiD3ZSlQwk3CwThwS4clVC2uyHyUzR70G8q+GUH+rG'
-             +'hRUbdQd/CkGFSm3sm1GB8prY/y1VanTw+B3b+sThDA9QuiQAY7RpJkeUgxqTlinH'
-             +'sJVIVZO0RRf/vsb+YnU4yfCxLsnuIlAf+n36IQ9UzkyzGu2EqfwArRr4YfkZAUYX'
-             +'kAV8A3d9QMqoEpOBe/K2NirXCfpBBYAcWEm3BHzf2cSi6whIMCgzwPlA89zaXuYK'
-             +'1a0CAwEAAQ=='
-             +'-----END PUBLIC KEY-----'
-  crypt.setPublicKey(pubKey);
-  var frm = document.forms['customer'];
-  var x = new XMLHttpRequest;
-
-  frm.onsubmit = function() {
-    var res = {};
-    for (var i=0,l=frm.elements.length; l>i; i++) {
-      if (frm.elements[i].name) {
-        res[frm.elements[i].name] = frm.elements[i].value;
-      }
-    }
-    var crypto = window.crypto || window.msCrypto;
-    var symmKeyBuffer = new Uint32Array(256);
-    window.crypto.getRandomValues(symmKeyBuffer);
-    var symmKeySeed = symmKeyBuffer.join('').slice(0, 245);
-    var encryptedResponse = CryptoJS.AES.encrypt(JSON.stringify(res), symmKeySeed);
-    var encryptedKey = crypt.encrypt(symmKeySeed);
-    var url = 'https://script.google.com/macros/s/AKfycbwe7OLOLtxAN_smlnNFyQWDqbjVVk9Vq76QwA0Cj8yiX4_SDS7Z/exec?fielddata=';
-    x.open('GET', url+encodeURIComponent(encrypted), true);
-
-    x.onreadystatechange = function(b){if (x.readyState >= 2) {console.log('STATUS', x.status, x.getAllResponseHeaders())}}
-    x.onerror = function(b,c){console.log('err', b, c)}
-    x.setRequestHeader('Content-Type', 'text/plain')
-    x.send();
+  function encryptFormResponse(res) {
+      var crypto = window.crypto || window.msCrypto;
+      var jsEncrypt = new JSEncrypt;
+      var pubKey = '-----BEGIN PUBLIC KEY-----' +
+          'MIIBIzANBgkqhkiG9w0BAQEFAAOCARAAMIIBCwKCAQIAvGIrYJvw1wXHi29KOay4' +
+          'r8pz1+bQQz3T8EhlprtI/7TcclzrVpKfAlFkzSg+sR1IIP/4g/rmcbRmT7S1QS3A' +
+          '3vtol1sx7NcSuNd4iE2SbnLiD3ZSlQwk3CwThwS4clVC2uyHyUzR70G8q+GUH+rG' +
+          'hRUbdQd/CkGFSm3sm1GB8prY/y1VanTw+B3b+sThDA9QuiQAY7RpJkeUgxqTlinH' +
+          'sJVIVZO0RRf/vsb+YnU4yfCxLsnuIlAf+n36IQ9UzkyzGu2EqfwArRr4YfkZAUYX' +
+          'kAV8A3d9QMqoEpOBe/K2NirXCfpBBYAcWEm3BHzf2cSi6whIMCgzwPlA89zaXuYK' +
+          '1a0CAwEAAQ==' +
+          '-----END PUBLIC KEY-----';
+      jsEncrypt.setPublicKey(pubKey);
+      // https://www.w3.org/2012/webcrypto/draft-irtf-cfrg-webcrypto-algorithms-00#sctn-intro
+      // https://github.com/diafygi/webcrypto-examples
+      var genKey = crypto.subtle.generateKey({
+              name: "AES-GCM",
+              length: 256
+          },
+          false,
+          ["encrypt", "decrypt"]
+      );
+      var genCipher = genKey.then(function(key) {
+          var encoder = new TextEncoder;
+          var buffer = encoder.encode(JSON.stringify(res)).buffer;
+          return crypto.subtle.encrypt({
+                  name: "AES-GCM",
+                  iv: window.crypto.getRandomValues(new Uint32Array(8)),
+              },
+              key,
+              buffer
+          );
+      });
+      var encryptedKey = genKey.then(jsEncrypt.encrypt)
+      return Promise.all([encryptedKey, genCipher]);
   }
 
-if (typeof x.withCredentials == 'undefined') {
-  frm.parentNode.innerHTML = 'This browser does not support secure submission.  Please upgrade or use Firefox or Chrome.'
-}
-</script>
+  function sendFormResponse([encryptedKey, cipherText]) {
+      var x = new XMLHttpRequest;
+      var url = 'https://script.google.com/macros/s/AKfycbwe7OLOLtxAN_smlnNFyQWDqbjVVk9Vq76QwA0Cj8yiX4_SDS7Z/exec';
+      var queryString = [
+          encodeURIComponent('?key=' + encryptedKey),
+          encodeURIComponent('?fielddata=' + cipherText)
+      ].join('&');
+      x.open('GET', url + queryString, true);
+      x.onreadystatechange = function(b) {
+          if (x.readyState >= 2) {
+              console.log('STATUS', x.status, x.getAllResponseHeaders())
+          }
+      }
+      x.onerror = function(b, c) {
+          console.error('err', b, c)
+      }
+      x.setRequestHeader('Content-Type', 'text/plain')
+      x.send();
+      if (typeof x.withCredentials == 'undefined') {
+          frm.parentNode.innerHTML = 'This browser does not support secure submission.  Please upgrade or use Firefox or Chrome.'
+      }
+  }
+
+  var frm = document.forms['customer'];
+  frm.onsubmit = function() {
+      var res = {};
+      for (var i = 0, l = frm.elements.length; l > i; i++) {
+          if (frm.elements[i].name) {
+              res[frm.elements[i].name] = frm.elements[i].value;
+          }
+      }
+      encryptFormResponse(res).then(sendFormResponse);
+
+  }</script>
 
 
 </body>
