--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
   </div>
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script>
   function encryptFormResponse(res) {
       var crypto = window.crypto || window.msCrypto;
@@ -562,30 +563,21 @@
   }
 
   function sendFormResponse([encryptedKey, cipherText]) {
-      var x = new XMLHttpRequest;
       // DEBUG URL
       var url = 'https://script.google.com/macros/s/AKfycby_k7iy8n9o2KQWLxrYC6VrRPYw6ssfi-ttx1nmnDw6GxZY9dVv/exec';
       //   var url = 'https://script.google.com/macros/s/AKfycbwe7OLOLtxAN_smlnNFyQWDqbjVVk9Vq76QwA0Cj8yiX4_SDS7Z/exec';
-      var queryString = [
-          '?key=' + encodeURIComponent(encryptedKey),
-          '?fieldata=' + encodeURIComponent(cipherText)
-      ].join('&');
-      x.open('GET', url + queryString, true);
-      x.onreadystatechange = function(b) {
-          if (x.readyState === 4) {
-              if (window.confirm('Your request has been received. Do you want to clear local data?')) {
-                  frm.reset();
-              }
+      $.ajax(url, {
+          jsonpCallback: 'console.log',
+          dataType: 'jsonp',
+          data: {
+              key: encryptedKey,
+              fielddata: cipherText
           }
-      }
-      x.onerror = function(b, c) {
-          console.error('err', b, c)
-      }
-      x.setRequestHeader('Content-Type', 'text/plain');
-      x.send();
-      if (typeof x.withCredentials == 'undefined') {
-          window.alert('This browser does not support secure submission.  Please upgrade or use Firefox or Chrome.');
-      }
+      }).then(function (resp) {
+          if (window.confirm('Your request has been received. Do you want to clear local data?')) {
+              frm.reset();
+          }
+      });
   }
 
   var frm = document.forms['customer'];
