--- a/index.html
+++ b/index.html
@@ -513,82 +513,8 @@
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-<script>
-  function encryptFormResponse(res) {
-      var crypto = window.crypto || window.msCrypto;
-      var jsEncrypt = new JSEncrypt;
-      var pubKey = '-----BEGIN PUBLIC KEY-----' +
-          'MIIBIzANBgkqhkiG9w0BAQEFAAOCARAAMIIBCwKCAQIAvGIrYJvw1wXHi29KOay4' +
-          'r8pz1+bQQz3T8EhlprtI/7TcclzrVpKfAlFkzSg+sR1IIP/4g/rmcbRmT7S1QS3A' +
-          '3vtol1sx7NcSuNd4iE2SbnLiD3ZSlQwk3CwThwS4clVC2uyHyUzR70G8q+GUH+rG' +
-          'hRUbdQd/CkGFSm3sm1GB8prY/y1VanTw+B3b+sThDA9QuiQAY7RpJkeUgxqTlinH' +
-          'sJVIVZO0RRf/vsb+YnU4yfCxLsnuIlAf+n36IQ9UzkyzGu2EqfwArRr4YfkZAUYX' +
-          'kAV8A3d9QMqoEpOBe/K2NirXCfpBBYAcWEm3BHzf2cSi6whIMCgzwPlA89zaXuYK' +
-          '1a0CAwEAAQ==' +
-          '-----END PUBLIC KEY-----';
-      jsEncrypt.setPublicKey(pubKey);
-      // https://www.w3.org/2012/webcrypto/draft-irtf-cfrg-webcrypto-algorithms-00#sctn-intro
-      // https://github.com/diafygi/webcrypto-examples
-      var genKey = crypto.subtle.generateKey({
-              name: "AES-GCM",
-              length: 256
-          },
-          true,
-          ["encrypt", "decrypt"]
-      );
-      var genCipher = genKey.then(function(key) {
-          var encoder = new TextEncoder;
-          var buffer = encoder.encode(JSON.stringify(res)).buffer;
-          return crypto.subtle.encrypt({
-                  name: "AES-GCM",
-                  iv: window.crypto.getRandomValues(new Uint32Array(8)),
-              },
-              key,
-              buffer
-          );
-      }).then(function(cipherTextBuffer) {
-          var typedBuffer = new Uint8Array(cipherTextBuffer);
-          var binary = '';
-          for (var i = 0; i < typedBuffer.byteLength; i++) {
-              binary += String.fromCharCode(typedBuffer[i]);
-          }
-          return btoa(binary);
-      });
-      var genEncryptedKey = genKey.then(function(key) {
-          return crypto.subtle.exportKey("raw", key);
-      }).then(function(serializedKey) {
-          return btoa(jsEncrypt.encrypt(serializedKey));
-      });
-      return Promise.all([genEncryptedKey, genCipher]);
-  }
-
-  function sendFormResponse([encryptedKey, cipherText]) {
-      // DEBUG URL
-      var url = 'https://script.google.com/macros/s/AKfycby_k7iy8n9o2KQWLxrYC6VrRPYw6ssfi-ttx1nmnDw6GxZY9dVv/exec';
-      //   var url = 'https://script.google.com/macros/s/AKfycbwe7OLOLtxAN_smlnNFyQWDqbjVVk9Vq76QwA0Cj8yiX4_SDS7Z/exec';
-      $.ajax(url, {
-          jsonpCallback: 'console.log',
-          dataType: 'jsonp',
-          data: {
-              key: encryptedKey,
-              fielddata: cipherText
-          }
-      }).then(function (resp) {
-          if (window.confirm('Your request has been received. Do you want to clear local data?')) {
-              frm.reset();
-          }
-      });
-  }
-
-  var frm = document.forms['customer'];
-  frm.onsubmit = function() {
-          var res = {};
-          for (var i = 0, l = frm.elements.length; l > i; i++) {
-              if (frm.elements[i].name) {
-                  res[frm.elements[i].name] = frm.elements[i].value;
-              }
-          }
-          encryptFormResponse(res).then(sendFormResponse);  }</script>
+<script src='scripts/textEncoder.js'></script>
+<script src='scripts/main.js'></script>
 
 
 </body>
