--- a/index.html
+++ b/index.html
@@ -514,6 +514,6 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src='scripts/textEncoder.js'></script>
-<script src='scripts/main.js'></script>
+<script src='scripts/index.js'></script>
 </body>
 </html>
