--- a/decrypt.html
+++ b/decrypt.html
@@ -10,7 +10,8 @@
     <input type="file" id="encrypted" name="encrypted" accept=".csv">
   </div>
 </form>
-<table id="cryptoresults">
+<h2> Responses </h2>
+<table id="results">
 </table>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
