--- a/decrypt.html
+++ b/decrypt.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 </head>
 <body>
 <form action="javascript:void(0)">
@@ -15,6 +16,7 @@
 </table>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script src='//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js'></script>
 <script src='scripts/textEncoder.js'></script>
 <script src='scripts/decrypt.js'></script>
 </body>
