reducing dependencies and adding more to configuration for building

--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -517,5 +517,8 @@
     </div>
   </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.js"
+        integrity="sha256-EC4uJBUVJajz55e16crIlugfOU9dQLHFVqVjw9E0wpI="
+        crossorigin="anonymous"></script>
 </body>
 </html>
