now working end-to-end

--- a/src/decrypt/decrypt.html
+++ b/src/decrypt/decrypt.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+  <!-- The stylesheet below should be copied from node_modules/datatables.net-dt/css via webpack -->
+  <link rel="stylesheet" href="jquery.dataTables.min.css">
 </head>
 <body>
 <form action="javascript:void(0)">
