--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -119,9 +119,43 @@
                 </div>
             </fieldset>
           </div>
+          <div class="form-item What is your preferred language?</label>
+            <fieldset id="language">
+                <div class="option">
+                  <label>
+                   <input type="checkbox" name="language_english" value="English" />
+                   English
+                  </label>
+                </div>
+                <div class="option">
+                  <label>
+                    <input type="checkbox" name="language_spanish" value="Spanish" />
+                    Spanish
+                  </label>
+                </div>
+                <div class="option">
+                  <label>
+                    <input type="checkbox" name="language_russian" value="Russian" />
+                    Russian
+                  </label>
+                </div>
+                <div class="option">
+                  <label>
+                    <input type="checkbox" name="language_chinese" value="Chinese (Cantonese or Mandarin)" />
+                    Chinese (Cantonese or Mandarin)
+                  </label>
+                </div>
+                <div class="option">
+                  <label>
+                    <input type="checkbox" name="another" value="Another language" />
+                    Another language
+                  </label>
+                </div>
+            </fieldset>
+          </div>
           <h3>The following questions are also required for program enrollment</h3>
           <div class="form-item field radio required">
-            <label class="title required">Do you have insurance?</label>
+            <label class="title required">Do you have health insurance?</label>
             <div class="option">
               <label>
                 <input type="radio" name="insurance" value="yes" /> Yes
@@ -508,9 +542,62 @@
 
           <div class="form-item field text">
             <label class="title">State</label>
-            <input class="field-element" name="state" />
+            <div class="option">
+              <select name="state">
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+              </select>
+            </div>
           </div>
-        </div>
+
         <input class="button sqs-system-button sqs-editable-button"
                type='submit' value='Submit' />
       </form>
